samples/_failures_safe/1761406066_e5d6be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e122394d.c: In function ‘main’:
./samples/SAFE/__tmp_e122394d.c:177:5: error: expected declaration or statement at end of input
  177 |     }
      |     ^
